# goit-pythonweb-hw-10

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 473f6ab8e1f7_initial_migration.py
src/api/: contacts.py  users.py
src/config/: config.py
src/db/: db.py
src/db/models/: contact.py
src/repository/: contacts.py  user.py
src/services/: auth.py  contacts.py  user.py
